--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dnl-remodelações",
+  "name": "rf-construções",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "@google/genai": "^1.37.0",
-    "@supabase/supabase-js": "2.39.3",
-    "react-router-dom": "^7.12.0",
-    "react": "^19.2.3"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "lucide-react": "0.460.0",
+    "react-router-dom": "6.22.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
